# gemma-table-finetune-lab

./: .gitignore  Dockerfile  Modelfile  README.md  app.py
assistant_platform/: README.md  pyproject.toml
assistant_platform/agents/: dialogue.py  memory_agent.py  orchestrator.py  policy.py  router.py  search_synthesizer.py  smart_home_resolver.py  tool_executor.py
assistant_platform/api/: app.py  routes_chat.py  routes_gemma_table.py  routes_webhook.py
assistant_platform/config/: app.yaml  policy.yaml  tools.yaml
assistant_platform/dialogue/: confirmation.py  slot_filling.py  state_store.py
assistant_platform/gemma_table/: __init__.py  backends.py  core.py  evaluation.py  render_school_report.py  research.py  run_workflow.py  school_benchmark.py  service.py  table_benchmark.py  train.py  training_data.py
assistant_platform/prompts/: dialogue.md  orchestrator.md  policy.md  router.md  search_synthesis.md
assistant_platform/routing/: entity_extractors.py  matcher.py  semantic_ranker.py  skill_loader.py
assistant_platform/schemas/: common.py  dialogue.py  events.py  tool_calls.py
assistant_platform/skills/: calendar.yaml  maps.yaml  media.yaml  memory.yaml  messaging.yaml  notes_lists.yaml  reminders.yaml  search_local.yaml  smart_home.yaml  time_date.yaml  utilities.yaml  weather.yaml
assistant_platform/tests/: test_dialogue.py  test_gemma_table.py  test_router.py  test_skills.py  test_tools.py
assistant_platform/tools/: __init__.py  base.py  messaging_tools.py  registry.py  reminder_tools.py  time_tools.py  utility_tools.py  weather_tools.py
(+25 files in other folders)
